<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WeighBridge</string>
    <string name="error_message">Error happen, please click here to reload</string>
    <string name="view">View/Edit</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="license">License</string>
    <string name="inbound">Inbound</string>
    <string name="outbound">Outbound</string>
    <string name="datetime">Date</string>
    <string name="lorem_date">5 hours ago</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim a</string>
    <string name="edit">Edit</string>
    <string name="menu_date">Date</string>
    <string name="menu_name">Name</string>
    <string name="menu_license">License</string>
</resources>