<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_nett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/black_title"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            tools:text="@string/lorem"
            />

        <TextView
            android:id="@+id/tv_inbound_outbound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@+id/tv_nett"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textColor="@color/black_title"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            tools:text="@string/lorem"
            />

        <TextView
            android:id="@+id/tv_driver_name_plate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@+id/tv_inbound_outbound"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textColor="@color/black_title"
            android:fontFamily="sans-serif"
            tools:text="@string/lorem"
            />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_driver_name_plate"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:textColor="@color/gray_title"
            android:fontFamily="sans-serif"
            tools:text="@string/lorem_date"
            />

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/button_create"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_view"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            />

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/button_view"
            app:layout_constraintStart_toEndOf="@+id/button_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/view"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>